fix some layout issues

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,1 +1,14 @@
-@import 'colors.scss';
+.yt-embed {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
